bug-fixed: buttons connector not aligned with button-container while dragging

--- a/src/assets/sass/cds/styles.scss
+++ b/src/assets/sass/cds/styles.scss
@@ -421,3 +421,7 @@ img.hover-icon{
     color: #dcdcdc;
     cursor: grab;
 }
+
+.cds-reply-button-element{
+    position: relative;
+}
